--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,1 +1,18 @@
-<p>This is the partial for view 1.</p>
+<p>Crew Roster</p>
+
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <!--<th><input type="checkbox" ng-model="toggle" ng-click="toggleSelectAll()" /> Action</th>-->
+            <th>Name</th>
+            <th>Call Word</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="member in members">
+            <!--<td><input type="checkbox" ng-model="member.Checked" /></td>-->
+            <td><a href="#">{{ member.name}}</a></td>
+            <td>{{ member.callWord }}</td>
+        </tr>
+    </tbody>
+</table>
