--- a/app/partials/partial2.html
+++ b/app/partials/partial2.html
@@ -1,4 +1,29 @@
 <p>This is the partial for view 2.</p>
+<angular-table model="[ { id: 1, name: 'Bob', street: '1 street ave' } ]" 
+    filter-query-model="filterQuery" default-sort-column="id">
+    <header-row>
+        <header-column sortable="true" sort-field-name="id">
+            <div style="display: inline-block;">Id</div>
+            <sort-arrow-ascending></sort-arrow-ascending>
+            <sort-arrow-descending></sort-arrow-descending>
+        </header-column>
+        <header-column sortable="false" sort-field-name="name">
+            Name
+        </header-column>
+        <header-column sortable="true" sort-field-name="street">
+            <div style="display: inline-block;">Street</div>
+            <sort-arrow-ascending></sort-arrow-ascending>
+            <sort-arrow-descending></sort-arrow-descending>
+        </header-column>
+    </header-row>
+
+    <row on-selected="handleRowSelection(row)" selected-color="#87cefa" 
+        even-color="#ffffff" odd-color="#eeeeee">
+        <column>{{ row.id }}</column>
+        <column>{{ row.name }}</column>
+        <column>{{ row.street }}</column>
+    </row>
+</angular-table>
 <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
